# ha-agile-solar

./: .env.example  .gitignore  Dockerfile  README.md  config.json  config.yaml.example  pyproject.toml  repository.json
.github/workflows/: build.yml
addon/: run.sh
src/octopus_export_optimizer/: __init__.py  __main__.py  app.py  demo.py
src/octopus_export_optimizer/api/: server.py
src/octopus_export_optimizer/calculations/: aggregator.py  charge_planner.py  export_planner.py  flat_rate_planner.py  overnight_target.py  revenue_calculator.py  revenue_estimator.py  solar_profile.py
src/octopus_export_optimizer/config/: constants.py  settings.py
src/octopus_export_optimizer/control/: evening_reserve.py  inverter_controller.py  mode_mapper.py  models.py
src/octopus_export_optimizer/ingestion/: ha_state_ingester.py  meter_ingester.py  octopus_client.py  tariff_ingester.py
src/octopus_export_optimizer/models/: ha_state.py  (+6 more)
tests/: conftest.py  factories.py
tests/fixtures/: agile_export_rates_sample.json  meter_consumption_sample.json
tests/integration/: test_meter_repo.py  test_revenue_repo.py  test_tariff_repo.py
tests/unit/: test_aggregator.py  test_charge_planner.py  test_evening_reserve.py  test_export_planner.py  test_flat_rate_planner.py  test_inverter_controller.py  test_mode_mapper.py  test_overnight_charge_rule.py  test_overnight_target.py  test_payload_builder.py  test_recommendation_engine.py  test_recommendation_rules.py  test_revenue_calculator.py  test_revenue_estimator.py  test_settings.py  test_solar_forecast_gate.py  test_solar_profile.py
(+23 files in other folders)
